# LinearTemplateFit

./: .gitignore  LICENSE  README.md  lcgenv-LCG_97-x86_64-centos7-gcc9-opt.sh
LTF/: LTF.cxx  LTF_ROOTTools.h  LTF_Tools.cxx  LTF_Tools.h  Makefile  doxygen.config  example1_LTF_gaus.cxx  example1_LTF_gaus_NoROOT.cxx  example2_LTF_gaus2D.cxx  example2_LTF_gaus2D_NoROOT.cxx  example3_LTF_gaus_sigma.cxx  example_CMSinclusivejets_MSTW_CMSpaper.cxx  example_CMSinclusivejets_NN30_BRSSWpaper.cxx  example_LTF_gaus.cxx  example_LTF_gaus2D.cxx  example_LTF_gaus2D_NoROOT.cxx  example_LTF_gaus_NoROOT.cxx  example_gaus2D_LTF.cxx  example_gaus_LTF.cxx  mjet_mtop.cxx  plot_LTF1D.cxx
LTF/LTF/: LTF.h  LTF_ROOTTools.h
LTF/examples/: example2_LTF_gaus2D.cxx  example_CMSinclusivejets_NN30_BRSSWpaper.cxx
LTF/src/: LTF.cxx  LTF_ROOTTools.cxx  LTF_Tools.cxx
LTF_Eigen/: Makefile  README.md  setup.sh
LTF_ROOT/: CMakeLists.txt  README.md  doxygen.config  setup.sh
LTF_ROOT/LTF/: CMakeLists.txt
LTF_ROOT/LTF/inc/: LTF_LinkDef.h
LTF_ROOT/LTF/inc/LTF/: LTF.h  LTF_ROOTTools.h  LTF_Tools.h
LTF_ROOT/LTF/src/: LTF.cxx  LTF_ROOTTools.cxx
LTF_ROOT/examples/: .#myexample1_LTF_gaus.cxx  CMakeLists.txt  LTF  example1_LTF_gaus.cxx  example2_LTF_gaus2D.cxx  example3_LTF_gaus_sigma.cxx  example_ATLAS_topmass.cxx  example_CMSinclusivejets_MSTW_CMSpaper.cxx  example_CMSinclusivejets_NN30_BRSSWpaper.cxx
LTF_ROOT/examples/data/: Ana_S3beta_Cluster__mtop_165_H_1246.root  Ana_S3beta_Cluster__mtop_170_H_1246.root  Ana_S3beta_Cluster__mtop_175_H_1246.root  example2_LTF_gaus2D.txt
(+26 files in other folders)
